# code-mintage

./: .gitignore  requirements.txt  setup.cfg
src/code_mintage/: cpp_properties.py  jlink_command.py  jlink_scripts.py  main.py  project_tree.py  tasks.py
tests/: __init__.py  configuratin_test.py  tasks_test.py
