[metadata]
name = code_mintage
version = attr: code_mintage.version.VERSION
author = Viacheslav
author_email = viacheslav@mcublog.xyz
description = Creating VScode config for the Embedded Project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mcublog/rtt-console
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.entry_points]
console_scripts =
    code-mintage = code_mintage.main:main

[options.packages.find]
where = src